chore: simplified directory structure. chore: bump deps.

--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
     ],
     "autoload": {
         "psr-4": {
-            "Raxos\\Mail\\": "src/Raxos/Mail"
+            "Raxos\\Mail\\": "src/"
         }
     },
     "config": {
