--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,9 @@
     "config": {
         "platform": {
             "php": "8.4"
+        },
+        "allow-plugins": {
+            "php-http/discovery": false
         }
     },
     "repositories": [
@@ -30,6 +33,9 @@
     ],
     "require": {
         "jetbrains/phpstorm-attributes": "^1.2",
-        "raxos/foundation": "*"
+        "mailgun/mailgun-php": "^v4.3",
+        "phpmailer/phpmailer": "^v6.10",
+        "raxos/foundation": "*",
+        "wildbit/postmark-php": "^v7.0"
     }
 }
